# kitty_nurse_backend

./: .gitignore  Makefile  conftest.py  pyproject.toml
src/: manage.py
src/events/: admin.py  filters.py  models.py  serializers.py  views.py
src/events/migrations/: 0001_initial.py  0002_auto_20210404_2022.py  0003_event_created_at.py  0004_auto_20210405_0904.py
src/events/tests/: fixtures.py
src/events/tests/api/: test_create_event.py  test_delete_event.py  test_list_event.py  test_retrieve_event.py  test_update_event.py
src/events/usecases/: event_type_preset.py
src/kitty_nurse/: asgi.py  settings.py  urls.py  wsgi.py
src/notes/: models.py  serializers.py  views.py
src/notes/migrations/: 0001_initial.py  0002_auto_20210317_2312.py  0003_auto_20210317_2319.py
src/notes/tests/: fixtures.py
src/notes/tests/api/: test_create_note.py  test_delete_note.py  test_list_notes.py  test_retrieve_note.py  test_update_note.py
src/notes/tests/use_cases/: test_create_note.py
src/notes/use_cases/: create_note.py
src/pets/: exceptions.py  models.py  serializers.py  views.py
src/pets/migrations/: 0001_initial.py  0002_auto_20210404_1323.py  0002_petownership.py  0003_pet_owners.py  0004_auto_20210317_2024.py  0005_auto_20210317_2025.py
src/pets/tests/: fixtures.py
src/pets/tests/api/: test_create_pet.py  test_list_pets.py  (+1 more)
src/pets/use_cases/: create_pet.py  list_pets.py  update_pet.py
src/users/: models.py  views.py
src/users/migrations/: 0001_initial.py
src/users/tests/: fixtures.py  test_views.py
src/users/use_cases/: signup_user.py
(+4 files in other folders)
